# ray

./: CMakeLists.txt  README.md  uml.mdj
include/ray/: implicit.h  light.h  material.h  ray.h  ray_scene.h
src/: CMakeLists.txt  implicit.cpp  light.cpp  material.cpp  ray_scene.cpp
src/apps/: CMakeLists.txt  ray_scene.cpp
